<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleX="2.5"
        android:src="@drawable/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints">

        <EditText
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_person"
            android:id="@+id/edittextemaillogin"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_email2"
            android:inputType="textEmailAddress"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="30dp"
        app:passwordToggleEnabled="true"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout1"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"

            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/editpasswordlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_password"
            android:inputType="number"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSign_in"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/mog"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:elevation="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleTextInputLayout2"
        tools:ignore="MissingConstraints"
        tools:targetApi="lollipop" />






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:id="@+id/forget_password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleTextInputLayout2" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/botom"
        android:scaleX="2.5"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSign_in"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>