<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Page_Signup">

    <ImageView
        android:id="@+id/im1"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="1dp"
        android:scaleX="3.2"
        android:src="@drawable/top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im1"
        tools:ignore="MissingConstraints">

        <EditText

            android:id="@+id/edittextemailSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="5dp"
            android:hint="@string/enter_your_email2"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        app:passwordToggleEnabled="true"

        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout3"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"
            android:id="@+id/editpasswordSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_password"
            android:inputType="number"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout4"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_person"
            android:id="@+id/editnameSignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:gravity="start"

        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout5"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_phone"
            android:id="@+id/edit_pone_Signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_phone"
            android:inputType="number"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout6"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_unverstiy"
            android:id="@+id/edit_unverstiy_Signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_theuniversity"
            android:inputType="text"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/simpleTextInputLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout7"
        tools:ignore="MissingConstraints">

        <EditText

            android:drawablePadding="5dp"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_group_work"
            android:id="@+id/edit_elfarqa_Signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_studygroup"
            android:inputType="text"
            android:textSize="13sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/mog"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/simpleTextInputLayout8" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:scaleX="3.2"
        android:src="@drawable/botom"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar_SignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="@+id/SignUp"
        app:layout_constraintTop_toTopOf="@+id/SignUp" />
</androidx.constraintlayout.widget.ConstraintLayout>