<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#192E59"
    android:elevation="@dimen/_20sdp"
    app:cardCornerRadius="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_2sdp"
    android:layout_marginStart="@dimen/_2sdp"
    android:layout_marginEnd="@dimen/_2sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tsh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/finshe_work"
        android:textAllCaps="false"
        android:textColor="#FFFCFC"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="subject"
        app:layout_constraintStart_toStartOf="parent"
app:layout_constraintTop_toBottomOf="@id/tsh"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/subject123"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="#FFFBFB"/>

    <TextView
        android:id="@+id/url123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="url"
        android:textColor="#FBF7F7"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subject123" />

    <Button
        android:id="@+id/dawun"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic__down"
        app:layout_constraintBottom_toTopOf="@+id/getproblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url123" />

    <Button
        android:id="@+id/more123"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_more"
        app:layout_constraintBottom_toTopOf="@+id/getproblem"
        app:layout_constraintEnd_toStartOf="@id/dawun"
        app:layout_constraintTop_toBottomOf="@+id/url123" />

    <ProgressBar
        android:id="@+id/pro123"
        android:visibility="gone"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/getproblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/url123" />

    <EditText
        android:id="@+id/getproblem"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:visibility="gone"
        android:hint="@string/enter_problem"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/sendproblem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sendproblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/_3sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/itembtnrec"
        android:text="@string/send_problem"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:visibility="gone"
        android:id="@+id/uplodbtn"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/ic_uplod"
        app:layout_constraintBottom_toTopOf="@+id/getproblem"
        app:layout_constraintEnd_toStartOf="@id/dawun"
        app:layout_constraintTop_toBottomOf="@+id/url123" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sendscssfiley"
    android:visibility="gone"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/sendproblem"
    android:layout_marginBottom="@dimen/_20sdp"
    android:textSize="@dimen/_20sdp"
    android:textColor="#FFFCFC"
    android:textStyle="bold"
    android:id="@+id/sendscssfiley"
    android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>